Fixed spacing

--- a/index.css
+++ b/index.css
@@ -83,10 +83,6 @@ iframe {
   padding: 65px 20px;
 }
 
-.text {
-  padding: 15px 0;
-}
-
 .abstract {
   display: none;
 }
